add: tags and project assigne
